--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <!--主体-->
     <div id="headerdiv" style="background-color:#00fd1e; height: 65px; min-width:1400px;">
-        <img style="width: 62px; float: left; margin: 0" src="./pic/logo.png" />
+        <img style="width: 62px; float: left; margin: 0" src="https://cdn-pic.gcxstudio.cn/2022/10/22/vD1B.png" alt="logo" border="0"/>
         <div style="float: left">
             <div id="webnameDiv" style="overflow: hidden; height: 65px; line-height: 65px; font-family: 黑体; color: #fff; font-size: 33px; padding-left: 5px; float: left;">
                 C2117官方网站-登陆
