--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Cache-Control" content="max-age=300" />
     <meta http-equiv="refresh" content="1800" />
     <title>C2117官方网站</title>
-    <link href="./wwcf/wawa.min.css" rel="stylesheet">
-    <script src="./wwcf/hm.js"></script>
+    <link href="./wawa.min.css" rel="stylesheet">
+    <script src="./hm.js"></script>
 
    </head>
 <body>
