--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="Cache-Control" content="max-age=300" />
     <meta http-equiv="refresh" content="1800" />
     <title>C2117官方网站</title>
+    <style type="text/css">
+    p{
+    
+    }
+    </style>
     <link href="./wawa.min.css" rel="stylesheet">
     <script src="./hm.js"></script>
 
