--- a/member.html
+++ b/member.html
@@ -32,9 +32,9 @@
         </table>
     </div>
     <div>
-        <a href="./member/C211720.html"><img src="./member/piclog/toggle20.png"></a>
+        <a href="./member/C211720.html"><img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xR37.png"></a>
         <br>
-        <a href="./member/C211733.html"><img src="./member/piclog/toggle33.png"></a>
+        <a href="./member/C211733.html"><img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xbgH.png"></a>
     </div>
 </body>
 </html>
