--- a/zhresource.html
+++ b/zhresource.html
@@ -9,7 +9,7 @@
 <body>
     <!--主体-->
     <div id="headerdiv" style="background-color:#1475b5; height: 65px; min-width:1400px;">
-        <img style="width: 62px; float: left; margin: 0" src="./pic/logo.png" />
+        <img style="width: 62px; float: left; margin: 0" src="https://cdn-pic.gcxstudio.cn/2022/10/22/vD1B.png" />
         <div style="float: left">
             <div id="webnameDiv" style="overflow: hidden; height: 65px; line-height: 65px; font-family: 黑体; color: #fff; font-size: 33px; padding-left: 5px; float: left;">
                 C2117官方网站-整活素材页
@@ -31,7 +31,48 @@
         </table>
     </div>
     <div>
-        <a href="./zhsc/">点击这里</a>
+        <img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xqXF.jpg" alt="梁丽云怒斥课件4K纯享版" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xPjx.png" alt="王英素材" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xUkm.png" alt="泥扭军" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xCq8.jpg" alt="zzh8" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/x7fa.jpg" alt="zzh7" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xTm5.jpg" alt="zzh6" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xDal.jpg" alt="zzh5" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xBO9.jpg" alt="zzh3" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xlr6.jpg" alt="zzh4" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xOXT.jpg" alt="zzh2" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xLwc.jpg" alt="zzh1" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xIjW.png" alt="zjy" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xZkU.jpg" alt="wy3" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xgpk.jpg" alt="wy2" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xff0.jpg" alt="wy1" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/x1mq.jpg" alt="wsx3" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/x0RS.gif" alt="wsx" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xtOg.jpg" alt="wsx2" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xjr4.jpg" alt="wsx1" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xWAM.png" alt="wqq" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xKwL.png" alt="rgbwsx" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/xHWd.jpg" alt="QQ图片20220504113135" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/v6Gr.jpg" alt="QQ图片20220504113131" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vypB.jpg" alt="QQ图片20220504113123" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vrJX.jpg" alt="QQ图片20220504113117" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/v5mH.jpg" alt="QQ图片20220504113045" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vVR7.png" alt="lanping" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vMLu.jpg" alt="h" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vmrE.jpg" alt="g" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vhAP.jpg" alt="f" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vSTF.png" alt="g2xfjxfz" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vQWJ.jpg" alt="e" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vzGx.jpg" alt="chy3" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vkPm.jpg" alt="chy2" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vGJ8.jpg" alt="c" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/veha.jpg" alt="chy1" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vc45.jpg" alt="b" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vYLl.jpg" alt="a" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vAN9.jpg" alt="80" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/v996.jpg" alt="80 (14)" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/vsTT.jpg" alt="80 (13)" border="0">
+<img src="https://cdn-pic.gcxstudio.cn/2022/10/22/v41k.jpg" alt="80 (9)" border="0">
     </div>
 </body>
 </html>
