--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a href="https://bilibili.com"><button>访问B站</button></a>
     </div>
     <div>
-        <a href="./zhresource.html"><button>访问17班整活素材资源页</button></a>
+        <a href="https://pic.gcxstudio.cn/album/17ban-zheng-huo-su-cai.BIW"><button>访问17班整活素材资源页</button></a>
     </div>
     <div>
         <a href="./eatljy/index.html"><button>访问吃掉李嘉妍</button></a>
