--- a/memer/C211733.html
+++ b/memer/C211733.html
@@ -23,7 +23,7 @@
         </table>
     </div>
     <div>
-        <img src="./level/Ex1.png">
+        <img src="https://cdn-pic.gcxstudio.cn/2022/10/22/2zBF.png" alt="Ex1" border="0">
     </div>
     <br>
     <div id="descript" style="color: #230a51; font-size: 15px; line-height:16px; padding-left: 3px; float: left; margin-top:20px; font-family: 宋体, sans-serif">
