--- a/zw.html
+++ b/zw.html
@@ -36,6 +36,10 @@
     <div>
         <tr>
             <td>
+                时间:2022/10/22 发布人:Mrxd[33]  <a href="./page/221022notice.html">基于github的网站搭建已完成</a>
+            </td>
+            <br>
+            <td>
                 时间:2022/10/21 发布人:Mrxd[33]  <a href="./page/221021notice.html">成员档案页已完成</a>
             </td>
             <br>
