--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
         </div>
 		<div id="menu-btn"><i class="icon-menu"></i></div>
 	</div>
-
+    <div>
+	    <h2>网站搭建完成,网站更新动态会在政务一栏发布</h2>
+    </div>
+    <div>
+        <a href=""><button>下载钉钉消息轰炸器</button></a>
+    </div>
     <div>
         <a href="https://www.zhixue.com"><button>访问智学网</button></a>
     </div>
