--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	    <h2>网站搭建完成,网站更新动态会在政务一栏发布</h2>
     </div>
     <div>
-        <a href=""><button>下载钉钉消息轰炸器</button></a>
+        <a href="https://emprc.lanzoum.com/b03diof5e"><button>下载自制网课工具箱(密码:2sqx)</button></a>
     </div>
     <div>
         <a href="https://www.zhixue.com"><button>访问智学网</button></a>
