--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
 				<a href="./member.html"><dt>成员档案</dt></a>
                 <dt></dt>
             </dl>
+	    <dl id="cate-10">
+                <dt></dt>
+				<a href="./study.html"><dt>学习资源</dt></a>
+                <dt></dt>
+            </dl>
+	    <dl id="cate-10">
+                <dt></dt>
+				<a href="./discuss.html"><dt>讨论</dt></a>
+                <dt></dt>
+            </dl>
+	    <dl id="cate-10">
+                <dt></dt>
+				<a href="./ban.html"><dt>18+服务[请勿点击]</dt></a>
+                <dt></dt>
+            </dl>
             </div>
         </div>
 		<div id="menu-btn"><i class="icon-menu"></i></div>
