--- a/ban.html
+++ b/ban.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<head runat="server">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="Cache-Control" content="max-age=300" />
+    <meta http-equiv="refresh" content="1800" />
+    <title>C2117官方网站</title>
+    <style type="text/css">
+    p{
+    
+    }
+    </style>
+    <link href="./wawa.min.css" rel="stylesheet">
+    <script src="./hm.js"></script>
 
+   </head>
+<body>
+    <!--主体-->
+    <div id="headerdiv" style="background-color:#FF0000; height: 65px; min-width:1400px;">
+        <img style="width: 62px; float: left; margin: 0" src="https://cdn-pic.gcxstudio.cn/2022/10/22/vD1B.png" alt="logo" border="0">
+        <div style="float: left">
+            <div id="webnameDiv" style="overflow: hidden; height: 65px; line-height: 65px; font-family: 黑体; color: #fff; font-size: 33px; padding-left: 5px; float: left;">
+                C2117官方网站
+            </div>
+            <div id="subTileSpan" style="color: #FFF; font-size: 15px; line-height:16px; padding-left: 3px; float: left; margin-top:20px; font-family: Arial, sans-serif">
+                <div>2.0</div><div>Offical Website of C2117</div>
+            </div>
+        </div>
+        <div style="float:left;margin-left:0;" id="warningSign_div"></div>
+        <table style="float: right;height:65px; text-align:center; ">
+            <tr>
+            </tr>
+        </table>
+    </div>
+    <script>
+			function ban(){
+				alert('您已被17班网站封禁');
+			}
+		</script>
+
+  <div style="overflow: hidden; height: 65px; line-height: 65px; font-family: 黑体; color: #FF0000; font-size: 33px; padding-left: 5px; float: left;">
+    <h2>您已被17班网站封禁</h2>
+  </div>
+</body>
+</html>
