--- a/login.html
+++ b/login.html
@@ -35,10 +35,16 @@
         </div>
         <div style="float:left;margin-left:0;" id="warningSign_div"></div>
         <br>
+	<br>
+	<br>
+	    
+	<br>
         <div>
 			<span>学号:</span>
 			<input type="text" placeholder="请输入学号" id="username">
 			<br>
+		<br>
+		<br>
 			<span>密码:</span>
 			<input type="password" placeholder="请输入学号" id="passwd">
 			<input type="button" value="登录" onclick="login()">
@@ -64,6 +70,14 @@
 				{
 					username: 211704,
 					passwd: 'C2117w04'
+				},
+			        {
+					username: 211705,
+					passwd: 'C2117w05'
+				},
+				{
+					username: 211706,
+					passwd: 'C2117w06'
 				},
 			]
 			function login() { //登陆判断
