--- a/login.html
+++ b/login.html
@@ -37,16 +37,17 @@
         <br>
 	<br>
 	<br>
-	    
+	<br>
+	<br>
 	<br>
         <div>
-			<span>学号:</span>
-			<input type="text" placeholder="请输入学号" id="username">
+			<span>学号[请不要加C]:</span>
+			<input type="text" placeholder="请输入学号,不要加C" id="username">
 			<br>
 		<br>
 		<br>
 			<span>密码:</span>
-			<input type="password" placeholder="请输入学号" id="passwd">
+			<input type="password" placeholder="请输入密码" id="passwd">
 			<input type="button" value="登录" onclick="login()">
 			<input type="button" id="btnClear" value="清除" onclick="doClear()" />
 		</div>
@@ -79,6 +80,318 @@
 					username: 211706,
 					passwd: 'C2117w06'
 				},
+			        {
+
+	username: 211707,
+	passwd: 'C2117w07'
+
+},
+{
+
+	username: 211708,
+	passwd: 'C2117w08'
+
+},
+{
+
+	username: 211709,
+	passwd: 'C2117w09'
+
+},
+{
+
+	username: 211710,
+	passwd: 'C2117w10'
+
+},
+{
+
+	username: 211711,
+	passwd: 'C2117w11'
+
+},
+{
+
+	username: 211712,
+	passwd: 'C2117w12'
+
+},
+{
+
+	username: 211713,
+	passwd: 'C2117w13'
+
+},
+{
+
+	username: 211714,
+	passwd: 'C2117w14'
+
+},
+{
+
+	username: 211715,
+	passwd: 'C2117w15'
+
+},
+{
+
+	username: 211716,
+	passwd: 'C2117w16'
+
+},
+{
+
+	username: 211717,
+	passwd: 'C2117w17'
+
+},
+{
+
+	username: 211718,
+	passwd: 'C2117w18'
+
+},
+{
+
+	username: 211719,
+	passwd: 'C2117w19'
+
+},
+{
+
+	username: 211720,
+	passwd: 'C2117w20'
+
+},
+{
+
+	username: 211721,
+	passwd: 'C2117w21'
+
+},
+{
+
+	username: 211722,
+	passwd: 'C2117w22'
+
+},
+{
+
+	username: 211723,
+	passwd: 'C2117w23'
+
+},
+{
+
+	username: 211724,
+	passwd: 'C2117w24'
+
+},
+{
+
+	username: 211725,
+	passwd: 'C2117w25'
+
+},
+{
+
+	username: 211726,
+	passwd: 'C2117w26'
+
+},
+{
+
+	username: 211727,
+	passwd: 'C2117w27'
+
+},
+{
+
+	username: 211728,
+	passwd: 'C2117w28'
+
+},
+{
+
+	username: 211729,
+	passwd: 'C2117w29'
+
+},
+{
+
+	username: 211730,
+	passwd: 'C2117w30'
+
+},
+{
+
+	username: 211731,
+	passwd: 'C2117w31'
+
+},
+{
+
+	username: 211732,
+	passwd: 'C2117w32'
+
+},
+{
+
+	username: 211733,
+	passwd: 'C2117w33'
+
+},
+{
+
+	username: 211734,
+	passwd: 'C2117w34'
+
+},
+{
+
+	username: 211735,
+	passwd: 'C2117w35'
+
+},
+{
+
+	username: 211736,
+	passwd: 'C2117w36'
+
+},
+{
+
+	username: 211737,
+	passwd: 'C2117w37'
+
+},
+{
+
+	username: 211738,
+	passwd: 'C2117w38'
+
+},
+{
+
+	username: 211739,
+	passwd: 'C2117w39'
+
+},
+{
+
+	username: 211740,
+	passwd: 'C2117w40'
+
+},
+{
+
+	username: 211741,
+	passwd: 'C2117w41'
+
+},
+{
+
+	username: 211742,
+	passwd: 'C2117w42'
+
+},
+{
+
+	username: 211743,
+	passwd: 'C2117w43'
+
+},
+{
+
+	username: 211744,
+	passwd: 'C2117w44'
+
+},
+{
+
+	username: 211745,
+	passwd: 'C2117w45'
+
+},
+{
+
+	username: 211746,
+	passwd: 'C2117w46'
+
+},
+{
+
+	username: 211747,
+	passwd: 'C2117w47'
+
+},
+{
+
+	username: 211748,
+	passwd: 'C2117w48'
+
+},
+{
+
+	username: 211749,
+	passwd: 'C2117w49'
+
+},
+{
+
+	username: 211750,
+	passwd: 'C2117w50'
+
+},
+{
+
+	username: 211751,
+	passwd: 'C2117w51'
+
+},
+{
+
+	username: 211752,
+	passwd: 'C2117w52'
+
+},
+{
+
+	username: 211753,
+	passwd: 'C2117w53'
+
+},
+{
+
+	username: 211754,
+	passwd: 'C2117w54'
+
+},
+{
+
+	username: 211755,
+	passwd: 'C2117w55'
+
+},
+{
+
+	username: 211756,
+	passwd: 'C2117w56'
+
+},
+{
+
+	username: 211757,
+	passwd: 'C2117w57'
+
+},
+{
+
+	username: 211758,
+	passwd: 'C2117w58'
+
+}
 			]
 			function login() { //登陆判断
 				let username = document.getElementById('username').value;
