--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 				<a href="./ban.html"><dt>18+服务[请勿点击]</dt></a>
                 <dt></dt>
             </dl>
+	    <dl id="cate-10">
+                <dt></dt>
+				<a href="./cpwall.html"><dt>表白墙</dt></a>
+                <dt></dt>
+            </dl>
             </div>
         </div>
 		<div id="menu-btn"><i class="icon-menu"></i></div>
