--- a/cpwall.html
+++ b/cpwall.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<head runat="server">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="Cache-Control" content="max-age=300" />
+    <meta http-equiv="refresh" content="1800" />
+    <title>C2117官方网站-表白墙</title>
+   </head>
+<body>
+    <!--主体-->
+    <div id="headerdiv" style="background-color:#5d1ad0; height: 65px; min-width:1400px;">
+        <img style="width: 62px; float: left; margin: 0" src="https://cdn-pic.gcxstudio.cn/2022/10/22/vD1B.png" alt="logo" border="0">
+        <div style="float: left">
+            <div id="webnameDiv" style="overflow: hidden; height: 65px; line-height: 65px; font-family: 黑体; color: #fff; font-size: 33px; padding-left: 5px; float: left;">
+                C2117官方网站-表白墙
+            </div>
+            <div id="subTileSpan" style="color: #FFF; font-size: 15px; line-height:16px; padding-left: 3px; float: left; margin-top:20px; font-family: Arial, sans-serif">
+                <div>2.0</div><div>CP page of C2117</div>
+            </div>
+        </div>
+        <div style="float:left;margin-left:0;" id="warningSign_div"></div>
+        <table style="float: right;height:65px; text-align:center; ">
+            <tr>
+                    <a href="./index.html">
+                        <span style="color: white; display:block" class="cnText">首页</span>
+                    </a>
+                    <a id="login" href="./login.html">
+                        <span style="color: white;display:block" class="cnText">退出登陆</span>
+                    </a>
+            </tr>
+        </table>
+    </div>
+    <div>
+      <div>
+        祝贺以下同学:
+        <br>
+        <img src="https://cdn-pic.gcxstudio.cn/2022/12/11/4dKr.jpg" alt="psc" border="0">
+        <img src="https://cdn-pic.gcxstudio.cn/2022/12/11/44JH.jpg" alt="psc (1)" border="0">
+        <br>
+        <button>献上祝福</button>
+      </div>
+    </div>
+</body>
+</html>
