--- a/cpwall.html
+++ b/cpwall.html
@@ -37,7 +37,7 @@
         <img src="https://cdn-pic.gcxstudio.cn/2022/12/11/4dKr.jpg" alt="psc" border="0">
         <img src="https://cdn-pic.gcxstudio.cn/2022/12/11/44JH.jpg" alt="psc (1)" border="0">
         <br>
-        <button>献上祝福</button>
+          <a href="./cpwall/celebrate.html"><button>献上祝福</button></a>
       </div>
     </div>
 </body>
