--- a/cpwall.html
+++ b/cpwall.html
@@ -34,8 +34,8 @@
       <div>
         祝贺以下同学:
         <br>
-        <img src="https://cdn-pic.gcxstudio.cn/2022/12/11/4dKr.jpg" alt="psc" border="0">
-        <img src="https://cdn-pic.gcxstudio.cn/2022/12/11/44JH.jpg" alt="psc (1)" border="0">
+        <a href="https://pic.gcxstudio.cn/image/4dKr"><img src="https://cdn-pic.gcxstudio.cn/2022/12/11/4dKr.md.jpg" alt="4dKr.md.jpg" border="0"></a>
+        <a href="https://pic.gcxstudio.cn/image/44JH"><img src="https://cdn-pic.gcxstudio.cn/2022/12/11/44JH.jpg" alt="44JH.jpg" border="0"></a>
         <br>
           <a href="./cpwall/celebrate.html"><button>献上祝福</button></a>
       </div>
