--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <td><a href="./cpwall.html"><div type="fastpb">访问表白墙</div></a></td>
         </tr>
         <tr>
-        <td><a href="./member.html"><div type="fastpb">访问成员档案页</div></a></td>
+        <td><a href="./mmber.html"><div type="fastpb">访问成员档案页</div></a></td>
         <td><a href="https://iamwawa.cn"><div type="fastpb">访问蛙蛙工具</div></a></td>
         <td><a href="https://bilibili.com"><div type="fastpb">访问B站</div></a></td>
         <td>敬请期待</td>
