--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!--头部导航栏 -->
         <div class="nav" id="nav">
             <div style="float: left">
-                <img style="width: 62px; float: left; margin: 0" src="https://cdn-pic.gcxstudio.cn/2022/10/22/vD1B.png" alt="logo" border="0">
+                
                 <div id="webnameDiv" style="overflow: hidden; height: 65px; line-height: 65px; font-family: 黑体; color: #fff; font-size: 33px; padding-left: 5px; float: left;">
                     湛江港城中学初二17官网-主页
                 </div>
@@ -140,7 +140,7 @@
     <div id="headerdiv" style="background-color:#00000000; height: 65px; min-width:100%;">
     </div>
     <div id="imtmsg" type="imtmsg">
-        <div>通知：‘网站3.0版本试运行,全新UI设计’</div>
+        <div>通知：MBTI页制作完成’</div>
     </div>
     <div id="fastpt" type="fastpt">
     <table border="1" type="hudb">
@@ -157,7 +157,7 @@
         <td><a href="./cpwall.html"><div type="fastpb">访问表白墙</div></a></td>
         </tr>
         <tr>
-        <td><a href="./member.html"><div type="fastpb">访问成员档案页</div></a></td>
+        <td><a href="./MBTI.html"><div type="fastpb">访问MBTI数据库</div></a></td>
         <td><a href="https://iamwawa.cn"><div type="fastpb">访问蛙蛙工具</div></a></td>
         <td><a href="https://bilibili.com"><div type="fastpb">访问B站</div></a></td>
         <td><a href="https://www.desmos.com/calculator?lang=zh-CN"><div type="fastpb">访问Desmos函数绘图</div></a></td>
