--- a/MBTI.html
+++ b/MBTI.html
@@ -96,6 +96,11 @@
                 <td>ENFP</td>
             </tr>
             <tr>
+                <td>C211737</td>
+                <td>吴静涵</td>
+                <td>ENTJ</td>
+            </tr>
+            <tr>
                 <td>C211739</td>
                 <td>吴昀劭</td>
                 <td>ESFP</td>
