--- a/MBTI.html
+++ b/MBTI.html
@@ -115,6 +115,11 @@
                 <td>邢方舟</td>
                 <td>ESFP</td>
             </tr>
+             <tr>
+                <td>C211745</td>
+                <td>许铮浩</td>
+                <td>ESTP</td>
+            </tr>
             <tr>
                 <td>C211750</td>
                 <td>张朝桉</td>
