--- a/MBTI.html
+++ b/MBTI.html
@@ -121,6 +121,16 @@
                 <td>ESTP</td>
             </tr>
             <tr>
+                <td>C211746</td>
+                <td>杨岑</td>
+                <td>ISFP</td>
+            </tr>
+            <tr>
+                <td>C211749</td>
+                <td>尤浩欢</td>
+                <td>INFP</td>
+            </tr>
+            <tr>
                 <td>C211750</td>
                 <td>张朝桉</td>
                 <td>ESFJ</td>
