--- a/zw.html
+++ b/zw.html
@@ -2,7 +2,7 @@
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" contect="width=device-witdh,initial-scale=1.0,maximun-scale=1.0,minimum-scale=1.0">
-    <title>湛江港城中学初二17官网-资源站</title>
+    <title>湛江港城中学初二17官网-公告&通知</title>
     </style>
     <link href="./zw.css" rel="stylesheet">
 
@@ -40,7 +40,7 @@
                 <th>发布人</th>
             </tr>
             <tr>
-                <td><a>初二17班第二周座位表</a></td>
+                <td><a href="./page/230211.html">初二17班第二周座位表</a></td>
                 <td>2023/2/11/12:07</td>
                 <td>陈关槐</td>
             </tr>
