--- a/kitbox.html
+++ b/kitbox.html
@@ -48,6 +48,10 @@
             <td>下载自制网课工具箱.zip(密码:2sqx)</td>
             <td><a href="https://emprc.lanzoum.com/b03diof5e"><button type="download">下载</button></a></td>
             </tr>
+            <td>下载自制网课工具箱V2.01.zip</td>
+            <td><a href="https://github.com/MrcRigelv/C2117/blob/main/LithExMrxd-Client/release/LithExMrxd%E5%B7%A5%E5%85%B7%E7%AE%B1-.Net6.0-V2.01-beta%E6%B5%8B%E8%AF%95%E7%89%88-20230326.rar"><button type="download">下载</button></a></td>
+            </tr>
+            
             </table>
     </div>
 </body>
